<resources>
    <string name="app_name">JODERDroid</string>
    <string name="minCha">Minimum characters</string>
    <string name="maxCha">Maximum characters</string>
    <string name="btnGenerate">Generate JODER©</string>
    <string name="hint">JODER©</string>
    <string name="JODERCopied">The JODER© has been copied to the clipboard</string>
    <string name="JODERCopyEmpty">There\'s no JODER© to copy</string>
    <string name="JODERShareEmpty">There\'s no JODER© to share</string>
    <string name="minJODERChar">A JODER© must be at least 5 characters long</string>
    <string name="maxJODERChar">A JODER© can have up to 9999 characters</string>
    <string name="minHigherMax">The minimum characters are higher than the maximum characters</string>
    <string name="minimumValue">5</string>
    <string name="maximumValue">9999</string>
    <string name="JODERDefault">JODER</string>
    <string name="actionSubtitle">JODERGenerator\'s Android version</string>
    <string name="imagecontentdescription">imageContentDescription</string>
    <string name="infoMessage">This project is an Android port of the AlexPowerUp\'s JODERGenerator application for WIndows</string>
    <string name="jmedinilla">JMedinilla</string>
    <string name="jmedinillaDesc">JODERDroid creator</string>
    <string name="jmedinillaTwitter">KastJMD</string>
    <string name="jmedinillaGit">JMedinilla/JODERDroid</string>
    <string name="alexpowerup">AlexPowerUp</string>
    <string name="alexpowerupDesc">JODERGenerator creator</string>
    <string name="alexpowerupTwitter">AlexPowerUp</string>
    <string name="alexpowerupGit">alexpowerup/JODERGenerator</string>
    <string name="info">See information</string>
</resources>
